cmake_minimum_required(VERSION 3.9)
project(kattis)

set(CMAKE_CXX_STANDARD 11)

add_executable(greedilyincreasing greedilyincreasing.cpp)
add_executable(server server.cpp)
add_executable(synchronizinglists synchronizinglists.cpp)
add_executable(exactlyeletrical exactlyeletrical.cpp)
add_executable(sok sok.cpp)
add_executable(oddmanout oddmanout.cpp)
add_executable(whatdoesthefoxsay whatdoesthefoxsay.cpp)
add_executable(cd cd.cpp)
add_executable(baconeggsandspam baconeggsandspam.cpp)
add_executable(compoundwords compoundwords.cpp)
add_executable(eligibility eligibility.cpp)
add_executable(leftbeehind leftbeehind.cpp)
add_executable(statistics statistics.cpp)
add_executable(acm acm.cpp)
add_executable(mosquito mosquito.cpp)
add_executable(armystrengtheasy armystrengtheasy.cpp)
add_executable(classy classy.cpp)
add_executable(steven_classy steven_classy.cpp)
add_executable(throwns throwns.cpp)
add_executable(rationalsequence2 rationalsequence2.cpp)
add_executable(steven_rationalsequence2 steven_rationalsequence2.cpp)
add_executable(bard bard.cpp)
add_executable(steven_bard steven_bard.cpp)
add_executable(wheresmyinternet wheresmyinternet.cpp)
add_executable(steven_wheresmyinternet steven_wheresmyinternet.cpp)
add_executable(reachableroads reachableroads.cpp)
add_executable(runningmom runningmom.cpp)
add_executable(battlesimulation battlesimulation.cpp)
add_executable(bela bela.cpp)
add_executable(karte karte.cpp)
add_executable(shuffling shuffling.cpp)
add_executable(chess chess.cpp)
add_executable(color color.cpp)
add_executable(fastfood fastfood.cpp)
add_executable(helpme helpme.cpp)
add_executable(toilet toilet.cpp)
add_executable(kitten kitten.cpp)
add_executable(grid grid.cpp)
add_executable(height height.cpp)
add_executable(baloni baloni.cpp)
add_executable(putovanje putovanje.cpp)
add_executable(countingstars countingstars.cpp)
add_executable(empleh empleh.cpp)
add_executable(horror horror.cpp)
add_executable(connectthedots connectthedots.cpp)
add_executable(gamerank gamerank.cpp)
add_executable(trik trik.cpp)
add_executable(rockpaperscissors rockpaperscissors.cpp)
add_executable(tritiling tritiling.cpp)
add_executable(twostones twostones.cpp)
add_executable(sibice sibice.cpp)
add_executable(r2 r2.cpp)
add_executable(quadrant quadrant.cpp)
add_executable(hissingmicrophone hissingmicrophone.cpp)
add_executable(filip filip.cpp)
add_executable(faktor faktor.cpp)
add_executable(cold cold.cpp)
add_executable(bijele bijele.cpp)